--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/react-transition-group": "^4.4.6",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "typescript": "5.1.6"
