--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lodash": "^4.17.21",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "20.5.2",
